force-app/main/default/objects/AquaticSalesDirector__c/AquaticSalesDirector__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting sale director name for AES approval process</description>
    <label>Aquatic Sales Director</label>
</CustomObject>