force-app/main/default/objects/AquaticSalesDirector__c/fields/Executive_Director_ID__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director_ID__c</fullName>
    <label>Approver3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>