force-app/main/default/objects/AquaticSalesDirector__c/fields/ID_of_Director__c.field-meta.xml
<CustomField>
    <fullName>ID_of_Director__c</fullName>
    <label>Appover2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>