force-app/main/default/objects/AquaticSalesDirector__c/fields/Id_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Id_of_Record__c</fullName>
    <label>AES RecordType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>